# deploykit

./: .mergify.yml  DEVELOPMENT.md  README.md  default.nix  flake.nix  pyproject.toml  setup.cfg  treefmt.nix
deploykit/: __init__.py
examples/: basic.py  colors.py
nix/: default.nix  shell.nix
tests/: command.py  conftest.py  ports.py  root.py  sshd.py  test_local.py  test_ssh.py
