[metadata]
name = deploykit
version = 0.0.0
author = Jörg Thalheim
author-email = joerg@thalheim.io
home-page = https://github.com/numtide/deploykit
description = Execute commands remotely and locally in parallel for a group of hosts
license = MIT
license-file = LICENSE
platform = any
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Topic :: Utilities
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10


[pycodestyle]
max-line-length = 88
ignore = E501,E741,W503,E402,E203,E266

[flake8]
max-line-length = 88
ignore = E501,E741,W503,E402,E203,E266
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist

[mypy]
warn_redundant_casts = true
disallow_untyped_calls = true
disallow_untyped_defs = true
no_implicit_optional = true

[mypy-setuptools.*]
ignore_missing_imports = True

[mypy-pytest.*]
ignore_missing_imports = True

[isort]
profile = black

[tool:pytest]
faulthandler_timeout = 60
