[metadata]
name = deploykit
version = 0.0.0
author = Jörg Thalheim
author-email = joerg@thalheim.io
home-page = https://github.com/numtide/deploykit
description = Execute commands remote via ssh and locally in parallel with python
long-description = file: README.rst
license = MIT
license-file = LICENSE
platform = any

classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: Posix
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Topic :: System :: Installation/Setup
    Topic :: System :: Systems Administration
    Topic :: Utilities

[options]
zip_safe = true
include_package_data = true
python_requires = >= 3.8
packages = find:
setup_requires =
    setuptools

[options.entry_points]
console_scripts =
    nix-update = deploykit:main

[bdist_wheel]
universal = true

[check]
metadata = true
restructuredtext = true
strict = true[wheel]
universal = 1

[pycodestyle]
max-line-length = 88
# E203 conflicts with black
ignore = E501,E741,W503,E203

[flake8]
max-line-length = 88
# E203 conflicts with black
ignore = E501,E741,W503,E203
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist

[mypy]
warn_redundant_casts = true
disallow_untyped_calls = true
disallow_untyped_defs = true
no_implicit_optional = true

[mypy-setuptools.*]
ignore_missing_imports = True

[mypy-pytest.*]
ignore_missing_imports = True

[isort]
profile = black
