[metadata]
name = deploykit
version = 0.0.0
author = Jörg Thalheim
author-email = joerg@thalheim.io
home-page = https://github.com/numtide/deploykit
description = Execute commands remote via ssh and locally in parallel with python
long-description = file: README.rst
license = MIT
license-file = LICENSE
platform = any

classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: Posix
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Topic :: System :: Installation/Setup
    Topic :: System :: Systems Administration
    Topic :: Utilities

[options.package_data]
# include type hints if present in any package
* = py.typed

[options]
zip_safe = true
include_package_data = true
python_requires = >= 3.8
packages = find:
setup_requires =
    setuptools

[bdist_wheel]
universal = true

[check]
metadata = true
restructuredtext = true
strict = true[wheel]
universal = 1
